realizando trocas aleatorias no grafo, gerando grafico de gantt a partir do grafo

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
-2 - Transformar resultado do grafo em grafico de gantt
-5 - Automatizar trocas no grafo
-4 - Modificar programa, utilizar melhores praticas de programacao
+- Transformar resultado do grafo em grafico de gantt
+- Fazer chines do SPRT e verificar resultados
+- Automatizar trocas no grafo
+- Definir como deve ser realizado os movimentos
+- Modificar programa, utilizar melhores praticas de programacao
